# qmx_project

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  debugging.md  development.md
src/study_agent/: agent.py  cleanup.py  config.py  doctor.py  main.py  screen_history.py  types.py
src/study_agent/capture/: camera.py  screen.py
src/study_agent/model/: client.py
src/study_agent/reporting/: reporter.py  scheduler.py
src/study_agent/storage/: db.py
src/study_agent/system/: context.py
tests/: test_agent_static_rule.py  test_cleanup.py  test_config.py  test_database.py  test_doctor.py  test_model_payload.py  test_reporter.py  test_scheduler.py  test_screen_history.py
