[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-agent"
version = "0.1.0"
description = "Local PC study monitoring agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mss==10.1.0",
  "opencv-python==4.11.0.86",
  "Pillow==11.1.0",
  "requests==2.32.3",
  "python-dotenv==1.0.1",
  "pydantic==2.11.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
  "ruff==0.11.0",
  "pre-commit==4.2.0",
]

[project.scripts]
study-agent = "study_agent.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
